--- a/hw7_mask_map.ipynb
+++ b/hw7_mask_map.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcmCZ21cvjCF1ctqF5uVC4",
+      "authorship_tag": "ABX9TyMrqK1eiOU0RfdF8HVWh4ML",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,21 @@
     {
       "cell_type": "code",
       "source": [
-        "print(0)"
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "\n",
+        "# 利用 requests 對 API 來源發送一個請求\n",
+        "url = 'https://raw.githubusercontent.com/kiang/pharmacies/master/json/points.json'\n",
+        "response =  requests.get(url)\n",
+        "\n",
+        "# 將請求回應的內容存成一個字串格式\n",
+        "d = response.text\n",
+        "\n",
+        "# 將長得像 json 格式的字串解析成字典或列表\n",
+        "data = json.loads(d)\n",
+        "\n",
+        "print(data)"
       ],
       "metadata": {
         "id": "QKQPV7auIOvc"
