--- a/hw7_mask_map.ipynb
+++ b/hw7_mask_map.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrqK1eiOU0RfdF8HVWh4ML",
+      "authorship_tag": "ABX9TyMRLSbLrOL/LGuLNJ/deM73",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,21 @@
         "# 將長得像 json 格式的字串解析成字典或列表\n",
         "data = json.loads(d)\n",
         "\n",
-        "print(data)"
+        "print(data)\n",
+        "\n",
+        "#. 接下來，請你將取回來的資料利用 Python 語法計算各地區的藥局數量，完成後 Commit 成第二個版本：\n",
+        "med_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "#所有藥局資料被包含在一個名為features的列表中，而不是直接在data字典的根層級。您需要適當地引用這個列表來遍歷藥局數據。\n",
+        "for d in data['features'] :\n",
+        "\tcounty = d['properties']['county']\n",
+        "\tif county in med_count:\n",
+        "\t\tmed_count[county] += 1\n",
+        "\telse:\n",
+        "\t\tmed_count [county] = 1\n",
+        "\n",
+        "print(med_count)"
       ],
       "metadata": {
         "id": "QKQPV7auIOvc"
