--- a/hw7_mask_map.ipynb
+++ b/hw7_mask_map.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRLSbLrOL/LGuLNJ/deM73",
+      "authorship_tag": "ABX9TyOo26/M65OTT2iQrakdhM51",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,23 @@
         "\telse:\n",
         "\t\tmed_count [county] = 1\n",
         "\n",
-        "print(med_count)"
+        "print(med_count)\n",
+        "\n",
+        "# 接下來請你計算出每個地區的成人剩餘口罩數量，並且將結果從大到小排列，完成後 Commit 第三個版本：\n",
+        "mask_count = {}\n",
+        "\n",
+        "# 填入欄位名稱\n",
+        "for d in data['features']:\n",
+        "\tcounty = d['properties']['county']\n",
+        "\tif county in mask_count :\n",
+        "\t\tmask_count[county] += d['properties']['mask_adult']\n",
+        "\telse :\n",
+        "\t\tmask_count[county] = d['properties']['mask_adult']\n",
+        "\n",
+        "# 將結果從大到小排列\n",
+        "med_count = dict(sorted(mask_count.items(), key=lambda item: item[1]))  # 按元組的第二個元素(aka口罩數量)排序\n",
+        "\n",
+        "print(mask_count)\n"
       ],
       "metadata": {
         "id": "QKQPV7auIOvc"
